--- a/HomeHelper/Controls/EditUtilitateUserControl.xaml
+++ b/HomeHelper/Controls/EditUtilitateUserControl.xaml
@@ -10,8 +10,8 @@
         mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    Height="400"
-    Width="400"
+    Height="450"
+    Width="600"
     >
     <Grid Background="#FF2B1926">
         <Grid.ColumnDefinitions>
@@ -33,8 +33,8 @@
         <TextBox Name="txtUnitate" Margin="10" Grid.Row="1" Grid.Column="1" Text="{Binding  ObiectInBinding.UnitateMasura, Mode=TwoWay}"></TextBox>
         <TextBlock x:Uid="lblValoareInitiala" Text="" Grid.Row="2" Grid.Column="0" Margin="10"></TextBlock>
         <TextBox Name="txtValoareInitiala" Grid.Row="2" Grid.Column="1" Margin="10"  Text="{Binding ObiectInBinding.IndexInitial, Mode=TwoWay}"></TextBox>
-        <TextBlock x:Uid="lblDataIndexInitial" Text="" Grid.Row="3" Grid.Column="0"></TextBlock>
-        <input:DatePicker Grid.Row="3" Grid.Column="1" Value="{Binding ObiectInBinding.DataIndexInitial, Mode=TwoWay}"></input:DatePicker>
+        <TextBlock x:Uid="lblDataIndexInitial" Margin="10" Text="" Grid.Row="3" Grid.Column="0"></TextBlock>
+        <input:DatePicker Grid.Row="3" Grid.Column="1" Margin="10" Value="{Binding ObiectInBinding.DataIndexInitial, Mode=TwoWay}"></input:DatePicker>
         <ListView Grid.Row="4" Grid.Column="1" Visibility="{Binding Erori.Count, Converter={StaticResource ItemCountToEmptyVisibilityConverter}}"
                   ItemsSource="{Binding Erori,Mode=TwoWay}" IsEnabled="False"
                   
