--- a/HomeHelperPhone/MainPage.xaml
+++ b/HomeHelperPhone/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:sparrow="clr-namespace:Sparrow.Chart;assembly=Sparrow.Chart.WP8.45"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -47,7 +48,22 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-
+            <sparrow:SparrowChart>
+                <sparrow:SparrowChart.XAxis>
+                    <sparrow:LinearXAxis/>
+                </sparrow:SparrowChart.XAxis>
+                <sparrow:SparrowChart.YAxis>
+                    <sparrow:LinearYAxis/>
+                </sparrow:SparrowChart.YAxis>
+                <sparrow:LineSeries>
+                    <sparrow:LineSeries.Points>
+                        <sparrow:DoublePoint Data="0" Value="1"/>
+                        <sparrow:DoublePoint Data="1" Value="2"/>
+                        <sparrow:DoublePoint Data="2" Value="3"/>
+                        <sparrow:DoublePoint Data="3" Value="4"/>
+                    </sparrow:LineSeries.Points>
+                </sparrow:LineSeries>
+            </sparrow:SparrowChart>
         </Grid>
 
         <!--Uncomment to see an alignment grid to help ensure your controls are
