--- a/HomeHelperPhone/App.xaml
+++ b/HomeHelperPhone/App.xaml
@@ -3,11 +3,19 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:mvvm="clr-namespace:HomeHelper.Common">
 
     <!--Application Resources-->
     <Application.Resources>
         <local:LocalizedStrings xmlns:local="clr-namespace:HomeHelperPhone" x:Key="LocalizedStrings"/>
+
+            <mvvm:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter"></mvvm:BooleanToVisibilityConverter>
+            <mvvm:ItemCountToEmptyVisibilityConverterButtonsAdd x:Key="ItemCountToEmptyVisibilityConverter"></mvvm:ItemCountToEmptyVisibilityConverterButtonsAdd>
+            <mvvm:ItemCountToEmptyVisibilityConverter x:Key="ItemCountToEmptyShow"></mvvm:ItemCountToEmptyVisibilityConverter>
+            <mvvm:ItemIndexToBackgroundConverter x:Key="ItemIndexBackgroundColor"></mvvm:ItemIndexToBackgroundConverter>
+            <mvvm:BooleanToActiv x:Key="BooleanToActiv"></mvvm:BooleanToActiv>
+        
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
