--- a/HomeHelperPhone/MainPage.xaml
+++ b/HomeHelperPhone/MainPage.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sparrow="clr-namespace:Sparrow.Chart;assembly=Sparrow.Chart.WP8.45"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -17,8 +18,6 @@
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
             <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Add.png" Text="Add" Click="ApplicationBarIconButton_OnClick"></shell:ApplicationBarIconButton>
-            <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Delete.png" IsEnabled="False" Text="Delete"></shell:ApplicationBarIconButton>
-            <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Select.png" Text="Select"></shell:ApplicationBarIconButton>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
     
@@ -29,38 +28,26 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!-- LOCALIZATION NOTE:
-            To localize the displayed strings copy their values to appropriately named
-            keys in the app's neutral language resource file (AppResources.resx) then
-            replace the hard-coded text value between the attributes' quotation marks
-            with the binding clause whose path points to that string name.
-
-            For example:
-
-                Text="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}"
-
-            This binding points to the template's string resource named "ApplicationTitle".
-
-            Adding supported languages in the Project Properties tab will create a
-            new resx file per language that can carry the translated values of your
-            UI strings. The binding in these examples will cause the value of the
-            attributes to be drawn from the .resx file that matches the
-            CurrentUICulture of the app at run time.
-         -->
-
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
-            <TextBlock Text="{Binding Path=LocalizedResources.lblUtitlitatiText, Source={StaticResource LocalizedStrings}}" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
+        <!--<TextBlock Text="{Binding Path=LocalizedResources.lblUtitlitatiText, Source={StaticResource LocalizedStrings}}" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>-->
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-
-            <phone:LongListSelector Name="lstUtilitati" ItemsSource="{Binding Path=ListaUtilitati, Mode=TwoWay}" Tap="LstUtilitati_OnTap"  LayoutMode="List">
+            <phone:Pivot>
+                <phone:PivotItem Header="{Binding Path=LocalizedResources.lblUtitlitatiText, Source={StaticResource LocalizedStrings}}">
+                    <phone:LongListSelector Name="lstUtilitati" ItemsSource="{Binding Path=ListaUtilitati, Mode=TwoWay}" Tap="LstUtilitati_OnTap" SelectedItem="{Binding Path=SelectedUtilitate, Mode=TwoWay}"  LayoutMode="List">
              <phone:LongListSelector.ItemTemplate>
                  <DataTemplate>
                      <StackPanel>
+                             <toolkit:ContextMenuService.ContextMenu>
+                                 <toolkit:ContextMenu IsZoomEnabled="False">
+                                            <toolkit:MenuItem Header="Edit" Click="EditItemClick" ></toolkit:MenuItem>
+                                     <toolkit:MenuItem Header="Delete"></toolkit:MenuItem>
+                                 </toolkit:ContextMenu>
+                             </toolkit:ContextMenuService.ContextMenu>
                             <TextBlock Text="{Binding DenumireUtilitate}" FontSize="40"></TextBlock>
                             <StackPanel Orientation="Horizontal" Margin="40 0 0 0">
                                 <TextBlock Text= "{Binding Path=LocalizedResources.ConsumLstUtilitatiText, Source={StaticResource LocalizedStrings}}"  FontSize="28"></TextBlock>
@@ -89,16 +76,15 @@
                  </DataTemplate>
              </phone:LongListSelector.ItemTemplate>   
                 
-            </phone:LongListSelector> 
+            </phone:LongListSelector>
+                </phone:PivotItem>
+                <phone:PivotItem Header="{Binding Path=LocalizedResources.lblConsumText, Source={StaticResource LocalizedStrings}}">
+                </phone:PivotItem>
+                <phone:PivotItem Header="{Binding Path=LocalizedResources.lblAlerteText, Source={StaticResource LocalizedStrings}}">
+                   
+               </phone:PivotItem>
+            </phone:Pivot>
         </Grid>
-
-        <!--Uncomment to see an alignment grid to help ensure your controls are
-            aligned on common boundaries.  The image has a top margin of -32px to
-            account for the System Tray. Set this to 0 (or remove the margin altogether)
-            if the System Tray is hidden.
-
-            Before shipping remove this XAML and the image itself.-->
-        <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
     </Grid>
 
 </phone:PhoneApplicationPage>
