--- a/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
+++ b/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="HomeHelperPhone.Views.ViewConsumuri"
+    x:Class="HomeHelperPhone.Views.EditViewConsumUtilitate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -13,11 +13,6 @@
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
-    <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Add.png" Text="Add" Click="AddConsumptionButton"></shell:ApplicationBarIconButton>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -27,20 +22,12 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="{Binding DenumireUtilitate, Mode=TwoWay}"  Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="{Binding Path=LocalizedResources.ApplicationTitle,Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-             <phone:Pivot>
-                <phone:PivotItem  Header="{Binding Path=LocalizedResources.lblConsumText, Source={StaticResource LocalizedStrings}}">
-                     
-                 </phone:PivotItem>
-                <phone:PivotItem  Header="Evolutie Consum">
 
-                </phone:PivotItem>
-            </phone:Pivot>
         </Grid>
     </Grid>
 
