--- a/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
+++ b/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage
+﻿<views:EditViewConsumUtilitateGeneric
     x:Class="HomeHelperPhone.Views.EditViewConsumUtilitate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,6 +6,8 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:views="clr-namespace:HomeHelperPhone.Views"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -27,8 +29,34 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Row="0" Margin="10" Text="{Binding Path=LocalizedResources.lblUtitlitatiText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+            <TextBlock Grid.Row="1" Margin="10" Text="{Binding Path=LocalizedResources.lblDataConsumText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+            <TextBlock Grid.Row="2" Margin="10" Text="{Binding Path=LocalizedResources.lblIndexText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+            <toolkit:ListPicker  Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Path=ListaUtilitati}" DisplayMemberPath="DenumireUtilitate" 
+            SelectionChanged="ListPicker_OnSelectionChanged" Name="lstUtils"
+            IsEnabled="True"></toolkit:ListPicker>
+            <toolkit:DatePicker Grid.Row="1" Grid.Column="1" Value="{Binding Path=ObiectInBinding.DataConsum, Mode=TwoWay }" Name="dtpIndex"  ></toolkit:DatePicker>
+            <TextBox InputScope="Number" Name="txtIndexUtil"  Grid.Row="2" Grid.Column="1" Text="{Binding Path=ObiectInBinding.IndexUtilitate, Mode=TwoWay}"></TextBox>
+            <ListBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding Path=Erori}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Value}"></TextBlock>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </Grid>
     </Grid>
 
-</phone:PhoneApplicationPage>
+</views:EditViewConsumUtilitateGeneric>
