--- a/HomeHelperPhone/Views/EditViewAlertaUtilitate.xaml
+++ b/HomeHelperPhone/Views/EditViewAlertaUtilitate.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage
+﻿<views:EditViewAlertaUtilitateGeneric
     x:Class="HomeHelperPhone.Views.EditViewAlertaUtilitate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:views="clr-namespace:HomeHelperPhone.Views"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -41,15 +42,15 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0" Margin="10" Text="{Binding Path=LocalizedResources.lblUtitlitatiText,Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <toolkit:ListPicker  Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Path=ListaUtilitati}" DisplayMemberPath="DenumireUtilitate" 
+            <TextBlock Grid.Row="0" Margin="10" Text="{Binding Path=LocalizedResources.lblUtitlitatiText,Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"></TextBlock>
+            <toolkit:ListPicker  Margin="10" Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Path=ListaUtilitati}" DisplayMemberPath="DenumireUtilitate" 
             SelectionChanged="LstUtilitati_OnSelectionChanged" Name="lstUtils"
-            IsEnabled="True" Margin="10"></toolkit:ListPicker>
-            <TextBlock Grid.Row="1" Text="{Binding Path=LocalizedResources.lblFrecventaAlertaText, Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <toolkit:ListPicker Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Path=Frecvente}"></toolkit:ListPicker>
-            <TextBlock Grid.Row="2" Text="{Binding Path=LocalizedResources.lblDataAlertaText, Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <toolkit:DatePicker Grid.Column="1" Grid.Row="2"  Value="{Binding Path=ObiectInBinding.DataAlerta, Mode=TwoWay}" x:Name="dtpLocal" Margin="10" ></toolkit:DatePicker>
-            <toolkit:TimePicker Grid.Column="1" Grid.Row="3" Value="{Binding Path=ObiectInBinding.DataAlerta, Mode=TwoWay}" Name="tmLoca" Margin="10" ></toolkit:TimePicker>
+            IsEnabled="True" ></toolkit:ListPicker>
+            <TextBlock Margin="10" Grid.Row="1" Text="{Binding Path=LocalizedResources.lblFrecventaAlertaText, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
+            <toolkit:ListPicker Margin="10" Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Path=Frecvente}" DisplayMemberPath="Value"></toolkit:ListPicker>
+            <TextBlock Margin="10" Grid.Row="2" Text="{Binding Path=LocalizedResources.lblDataAlertaText, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"></TextBlock>
+            <toolkit:DatePicker  Grid.Column="1" Grid.Row="2"  Value="{Binding Path=ObiectInBinding.DataAlerta, Mode=TwoWay}" x:Name="dtpLocal" Margin="10" ></toolkit:DatePicker>
+            <toolkit:TimePicker  Grid.Column="1" Grid.Row="3" Value="{Binding Path=ObiectInBinding.DataAlerta, Mode=TwoWay}" Name="tmLoca" Margin="10" ></toolkit:TimePicker>
             <ListBox Grid.Row="4" Grid.Column="1" ItemsSource="{Binding Path=Erori}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
@@ -62,4 +63,4 @@
         </Grid>
     </Grid>
 
-</phone:PhoneApplicationPage>
+</views:EditViewAlertaUtilitateGeneric>
