--- a/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
+++ b/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
@@ -43,7 +43,7 @@
             <TextBlock Grid.Row="1" Margin="10" Text="{Binding Path=LocalizedResources.lblDataConsumText,Source={StaticResource LocalizedStrings}}"></TextBlock>
             <TextBlock Grid.Row="2" Margin="10" Text="{Binding Path=LocalizedResources.lblIndexText,Source={StaticResource LocalizedStrings}}"></TextBlock>
             <toolkit:ListPicker  Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Path=ListaUtilitati}" DisplayMemberPath="DenumireUtilitate" 
-            SelectionChanged="ListPicker_OnSelectionChanged" Name="lstUtils"
+            SelectionChanged="ListPicker_OnSelectionChanged" Name="lstUtils" SelectedItem="{Binding Path=UtilitateSelectata, Mode=TwoWay}"
             IsEnabled="True"></toolkit:ListPicker>
             <toolkit:DatePicker Grid.Row="1" Grid.Column="1" Value="{Binding Path=ObiectInBinding.DataConsum, Mode=TwoWay }" Name="dtpIndex"  ></toolkit:DatePicker>
             <TextBox InputScope="Number" Name="txtIndexUtil"  Grid.Row="2" Grid.Column="1" Text="{Binding Path=ObiectInBinding.IndexUtilitate, Mode=TwoWay}"></TextBox>
